--- a/app/views/index/index.html
+++ b/app/views/index/index.html
@@ -1,19 +1,162 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>CREDIUDO | Inicio</title>
-</head>
-<body>
-	<h2>CREDIUDO | Inicio</h2>
-	<a href="/login">Iniciar Sesion</a>
+	<head>
+		<meta charset="UTF-8">
+		<title>CREDIUDO | Inicio</title>
 
-	<br><br>
-	
-	<% if(Evaluaciones == 0) {%>
+		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	</head>
+
+	<body>
+		<div class="container">
+			<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+			  	<img src="images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+			</div>
+			
+			<%- include('../partials/index/navbar.html') %>
+			
+			<!--=======MIGAS DE PAN=========-->
+			<nav aria-label="breadcrumb" style="margin-top: 1%">
+			  	<ol class="breadcrumb">
+			    	<li class="breadcrumb-item active" aria-current="page">Home</li>
+			  	</ol>
+			</nav>
+			<!--=======FIN MIGAS DE PAN=========-->
+
+			<div class="row">
+				<!--=========CARROUSEL========-->
+				<div class="col-md-9">
+					<div id="demo" class="carousel slide" data-ride="carousel">
+
+						<!-- Indicators -->
+						<ul class="carousel-indicators">
+							<li data-target="#demo" data-slide-to="0" class="active"></li>
+						    <li data-target="#demo" data-slide-to="1"></li>
+						</ul>
+
+						<!-- The slideshow -->
+						
+							<div class="carousel-inner">
+								
+							    <div class="carousel-item active">
+								    <img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid">
+								    <div class="carousel-caption d-none d-md-block">
+										<h5>CREDIUDO</h5>
+										<p>Zona de Evaluaciones</p>
+									  </div>
+							    </div>
+								
+								<% if(Evaluaciones == 0) {%>
+				
+								<%} else {%>
+									<div class="carousel-item">
+										<a href="/dashboard">
+									      	<img src="images/index/eval.jpg" alt="Responsive image" class="img-fluid">
+
+									      	<div class="carousel-caption d-none d-md-block">
+										    	<a href="/dashboard" style="color: white">
+											    	<h5>CREDIUDO</h5>
+											    	<p>Evaluacion 2</p>
+										    	</a>
+										  	</div>
+									  	</a>
+								    </div>
+								<%}%>
+							    
+							</div>
+						
+
+						<!-- Left and right controls -->
+						<a class="carousel-control-prev" href="#demo" data-slide="prev">
+						    <span class="carousel-control-prev-icon"></span>
+						</a>
+						<a class="carousel-control-next" href="#demo" data-slide="next">
+						    <span class="carousel-control-next-icon"></span>
+						</a>
+					</div>
+				</div>
+				<!--=========FIN CARROUSEL========-->
+
+				<div class="col-md-3">
+					<div class="list-group">
+						<a class="list-group-item list-group-item-action" href="/login">Evaluacion <span class="badge badge-light">4</span></a>
+						<a class="list-group-item list-group-item-action" href="#list-profile">Crear Instrumento</a>
+						<a class="list-group-item list-group-item-action" href="#list-messages" role="tab">Crear Factor</a>
+						<a class="list-group-item list-group-item-action" href="#list-settings">Settings</a>
+					</div>
+				</div>	
+			</div>
+			
+
+			
+
+			<hr>
+			<!--=====SUB COMISIONES========-->
+			<div class="col-md-12">
+				<section class="text-center">
+					<h3 style="padding-top: 1%; padding-bottom: 3%;">Encuentranos por Nucleos</h3>
+				</section>
+
+				<section class="row justify-content-md-center">
+					<div class="col-md-10" style="margin-bottom: 2%;">
+						<div class="row justify-content-md-center">
+							<div class="col-md-2 text-center">
+								<a href="">
+									<img src="images/index/nucleos/sucre.png" class="img-fluid" alt="Responsive image">
+									<p>Sub Comisión<br>Nucleo Sucre</p>
+								</a>
+							</div>
+
+							<div class="col-md-2 text-center">
+								<a href="">
+									<img src="images/index/nucleos/monagas.png">
+									<p>Sub Comisión<br>Nucleo Monagas</p>
+								</a>
+							</div>
+
+							<div class="col-md-2 text-center">
+								<a href="">
+									<img src="images/index/nucleos/bolivar.png">
+									<p>Sub Comisión<br>Nucleo Bolivar</p>
+								</a>
+							</div>
+
+							<div class="col-md-2 text-center">
+								<a href="">
+									<img src="images/index/nucleos/nuevaesparta.png">
+									<p>Sub Comisión<br>Nucleo Nueva Esparta</p>
+								</a>
+							</div>
+
+							<div class="col-md-2 text-center">
+								<a href="">
+									<img src="images/index/nucleos/nuevaesparta.png">
+									<p>Sub Comisión<br>Nucleo Nueva Esparta</p>
+								</a>
+							</div>	
+						</div>
+					</div>
+				</section>	
+			</div>	
+			<!--=====FIN SUB COMISIONES========-->
+		</div>
 		
-	<%} else {%>
-		<a href="/dashboard">Evaluacion</a>
-	<%}%>
-</body>
+
+		<h2>CREDIUDO | Inicio</h2>
+		<a href="/login">Iniciar Sesion</a>
+
+		<br><br>
+		
+		<% if(Evaluaciones == 0) {%>
+			
+		<%} else {%>
+			<a href="/dashboard">Evaluacion</a>
+		<%}%>
+
+		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+		<script src="js/bootstrap.min.js"></script>
+		<script src="/js/main.js"></script>
+	</body>
 </html>
