--- a/app/views/index/login.html
+++ b/app/views/index/login.html
@@ -3,19 +3,91 @@
 <head>
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Login</title>
+
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!--======estilo para el error=====-->
+	<style>
+        label.error{
+            color: red;
+        }
+	</style>
+	<!--======fin estilo para el error=====-->
 </head>
 <body>
-	<h2>CREDIUDO | Login</h2>
-	
-	<form id="signin" name="signin" method="post" action="/login">
-		<label for="cedula">Cedula de Identidad: </label>
-		<input type="text" name="cedula" id="cedula" placeholder="Ingrese sus cedula de Identidad">
-		<br><br>
-		<label for="password">Contraseña: </label>
-		<input type="password" name="password" id="password" placeholder="***********">
-		<br><br>
-		<input type="submit" name="entrar" value="Entrar">	
-	</form>
-	
+	<div class="container">
+		<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+			  <img src="images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+		</div>
+
+		<%- include('../partials/index/navbar.html') %>
+
+		<!--=======MIGAS DE PAN=========-->
+		<nav aria-label="breadcrumb" style="margin-top: 1%">
+			<ol class="breadcrumb">
+			   	<li class="breadcrumb-item" aria-current="page"><a href="/">Home</a></li>
+			   	<li class="breadcrumb-item active" aria-current="page"><a href="#">Login</a></li>
+			</ol>
+		</nav>
+		<!--=======FIN MIGAS DE PAN=========-->
+
+		
+		
+		<div class="row justify-content-md-center">
+			<div class="col-md-8">
+				<!--=======mensaje de alerta==========-->
+				<% if(error == false) {%>
+
+				<%} else {%>
+					<div class="alert alert-danger alert-dismissible fade show" role="alert">
+		            	<%= error %>
+		            	<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+						    <span aria-hidden="true">&times;</span>
+						</button>
+		            </div>
+				<%}%>
+				<!--=======fin mensaje de alerta==========-->
+
+				<div class="card">
+				  	<div class="card-header">
+				    	Inicio de Sesion
+				  	</div>
+				  	
+				  	<div class="card-body">
+				  		<form id="login" name="login" method="post" action="/login">
+							<div class="form-group">
+								<label for="cedula">Cedula de Identidad: </label>
+								<input type="text" name="cedula" class="form-control" id="cedula" placeholder="Ingrese sus cedula de Identidad" autofocus>
+							</div>
+
+							<div class="form-group">
+								<label for="password">Contraseña: </label>
+								<input type="password" name="password" class="form-control" id="password" placeholder="***********">
+							</div>
+
+							<input type="submit" class="btn btn-primary" name="entrar" value="Entrar">
+				  		</form>
+				    	
+				    	
+				  	</div>
+				</div>
+			</div>
+		</div>
+
+		<br>
+
+		<footer class="footer" style="background: #BEBCB0">
+			<div class="container">
+				<span class="text-muted">Pie de Pagina</span>
+			</div>
+		</footer>
+	</div>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="/js/jquery.validate.min.js"></script>
+	<script src="/js/main.js"></script>
 </body>
 </html>
