Dandole estilo al perfil de presidente

--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -4,13 +4,126 @@
 	<meta charset="UTF-8">
 	<title>CREDIUDO | Presidente</title>
 
-	<style type="text/css">
-		table, th, td {
-		    border: 1px solid black;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	
 </head>
 <body>
+	<div class="container">
+		<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+			<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+		</div>	
+
+		<%- include('../../partials/president/navbar.html') %>
+
+		<!--=======MIGAS DE PAN=========-->
+		<nav aria-label="breadcrumb" style="margin-top: 1%">
+			<ol class="breadcrumb">
+			    <li class="breadcrumb-item active" aria-current="page">Home</li>
+			    <li class="breadcrumb-item active" aria-current="page">Detalles</li>
+			</ol>
+		</nav>
+		<!--=======FIN MIGAS DE PAN=========-->
+
+		<div class="row">
+			<div class="col-md-3">
+				<div class="card">
+				  	<div class="card-header">
+				    	Datos Personales:
+				  	</div>
+				  
+				  	<div class="card-body">
+				    	<div class="form-group">
+				    		<p><b>Nombre: </b></p>
+				    		<p><b>Apellido: </b></p>
+				    		<p><b>Nucleo: </b></p>
+				    		<p><b>Unidad: </b></p>
+				    	</div>
+				  	</div>
+				</div>
+				<br>
+			</div>
+
+			<div class="col-md-9">
+				<div class="row">
+					<% var n = 0 %>
+					<% for(let i = 0; i < dataEvaluacion.length; i ++) {%>
+						<% if(dataEvaluacion[i].status == false) {%>
+							<div class="col-md-6">
+								<div class="card">
+									<div class="card-body">
+										<div class="row">
+											<div class="col-md-4">
+												<i class="fa fa-pencil-square-o" style="font-size: 60pt;"></i>
+											</div>
+
+											<div class="col-md-8">
+												<table style="width: 100%">
+													<tr>
+														<td style="width: 40%"><b>Evaluador: </b></td>
+														<td><%= dataEvaluacion[i].usuarioCedula %></td>
+													</tr>
+													<tr>
+														<td style="width: 40%"><b>Evaluado: </b></td>
+														<td><%= dataEvaluacion[i].usuarioEvaluado %></td>
+													</tr>
+												</table>
+												<hr>
+												En Proceso...
+											</div>
+										</div>
+									</div>
+								</div>
+								<br>
+							</div>
+						<%} else if(dataEvaluacion[i].status == true && Evaluacion.instrument.tipoEvalId == 4) {%>
+							<% n = n + 1 %>
+							<div class="col-md-6">
+								<div class="card">
+									<div class="card-body">
+										<div class="row">
+											<div class="col-md-4">
+												<i class="fa fa-pencil-square-o" style="font-size: 60pt;"></i>
+											</div>
+
+											<div class="col-md-8">
+												<table style="width: 100%">
+													<tr>
+														<td style="width: 40%"><b>Evaluador: </b></td>
+														<td><%= dataEvaluacion[i].usuarioCedula %></td>
+													</tr>
+													<tr>
+														<td style="width: 40%"><b>Evaluado: </b></td>
+														<td><%= dataEvaluacion[i].usuarioEvaluado %></td>
+													</tr>
+												</table>
+												<hr>
+												<a href="" class="btn btn-primary btn-block">Culminado</a>
+											</div>
+										</div>
+									</div>
+								</div>
+								<br>
+							</div>
+						<%} else if(dataEvaluacion[i].status == true && Evaluacion.instrument.tipoEvalId == 3) {%>
+							<a href="/president/culminado/<%=dataEvaluacion[i].evaluacionId%>/u/<%=dataEvaluacion[i].usuarioEvaluado%>/ue/<%=dataEvaluacion[i].usuarioCedula%>">Culminada</a>
+						<%}%>
+					<%}%>
+				</div>
+			</div>
+		</div>
+
+		<footer class="footer" style="background: #BEBCB0">
+			<div class="container">
+				<span class="text-muted">Pie de Pagina</span>
+			</div>
+		</footer>
+	</div>
+
+
+	<!--
+
 	<h3>Detalles | Evaluación</h3>
 	<% if(evalJefe == false) {%>
 		<h3>Evaluador: <%= dataEvaluacion[0].usuarioCedula %></h3>
@@ -98,7 +211,12 @@
 			</form>
 		<%}%>
 	<%}%>
+-->
 	
-	
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/jquery.validate.min.js"></script>
+	<script src="/js/main.js"></script>
 </body>
 </html>
